tekton/triggers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: el-ride-build-push-image-trigger-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /github-hooks
            pathType: Exact
            backend:
              service:
                name: el-ride-build-push-image-trigger
                port: 
                  number: 8080
