tekton/triggers/route-cleanup.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-ride-pipeline-run-cleanup-trigger
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: ride-pipeline-run-cleanup-trigger
  annotations:
    openshift.io/host.generated: 'true'
spec:
  path: /github-hooks
  to:
    kind: Service
    name: el-ride-pipeline-run-cleanup-trigger
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
